// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectsList /> renders properly 1`] = `
<div>
  <section
    class="jsx-2990028810 container"
    data-testid="projectsList_section"
  >
    <div
      class="jsx-2990028810 wrapper genericMargins"
    >
      <h1
        class="jsx-3953086084 colored"
      >
        Projetos
      </h1>
      <ul
        class="jsx-2990028810"
        data-testid="projectsList_noCarousel"
      >
        <li
          class="jsx-4162855406"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="tjela logo"
              data-nimg="intrinsic"
              decoding="async"
              src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75"
              srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 2x"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </span>
          <div
            class="jsx-4162855406 backface"
          >
            <a
              class="jsx-4162855406 brand link"
              href="https://www.instagram.com/tudonatjela/"
              rel="noreferrer"
              target="_blank"
            >
              @tudonatjela
            </a>
            <p
              class="jsx-4162855406 description"
            >
              Gestão de Redes Sociais e Criação de Conteúdo
            </p>
            <p
              class="jsx-4162855406 date"
            >
              2020
               - Presente
            </p>
            <small
              class="jsx-4162855406"
            >
              * 
              em dupla com Sofia Ferreirinho
            </small>
          </div>
        </li>
        <li
          class="jsx-4162855406"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="kaffeehaus logo"
              data-nimg="intrinsic"
              decoding="async"
              src="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75"
              srcset="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75 2x"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </span>
          <div
            class="jsx-4162855406 backface"
          >
            <a
              class="jsx-4162855406 brand link"
              href="https://www.instagram.com/kaffeehaus_lisboa/"
              rel="noreferrer"
              target="_blank"
            >
              @kaffeehaus_lisboa
            </a>
            <p
              class="jsx-4162855406 description"
            >
              Gestão de Redes Sociais e Criação de Conteúdo
            </p>
            <p
              class="jsx-4162855406 date"
            >
              2018
               - Presente
            </p>
          </div>
        </li>
        <li
          class="jsx-4162855406"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="guacamole logo"
              data-nimg="intrinsic"
              decoding="async"
              src="/_next/image?url=%2Fimages%2Fguacamole.jpg&w=828&q=75"
              srcset="/_next/image?url=%2Fimages%2Fguacamole.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=828&q=75 2x"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </span>
          <div
            class="jsx-4162855406 backface"
          >
            <a
              class="jsx-4162855406 brand link"
              href="https://www.instagram.com/guacamolegmg/"
              rel="noreferrer"
              target="_blank"
            >
              @guacamolegmg
            </a>
            <p
              class="jsx-4162855406 description"
            >
              Gestão de Redes Sociais e Criação de Conteúdo
            </p>
            <p
              class="jsx-4162855406 date"
            >
              2019
               - Presente
            </p>
            <small
              class="jsx-4162855406"
            >
              * 
              em dupla com Sofia Ferreirinho
            </small>
          </div>
        </li>
      </ul>
      <div
        class="jsx-2566809609 buttonWrapper"
      >
        <div
          class="jsx-2566809609 buttonBackground alignCenter"
        >
          <a
            class="jsx-2566809609 button"
            href="/pt/projects"
          >
            Ver mais
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`<ProjectsList /> renders properly in English 1`] = `
<div>
  <section
    class="jsx-2990028810 container"
    data-testid="projectsList_section"
  >
    <div
      class="jsx-2990028810 wrapper genericMargins"
    >
      <h1
        class="jsx-3953086084 colored"
      >
        Projects
      </h1>
      <ul
        class="jsx-2990028810"
        data-testid="projectsList_noCarousel"
      >
        <li
          class="jsx-4162855406"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="tjela logo"
              data-nimg="intrinsic"
              decoding="async"
              src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75"
              srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 2x"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </span>
          <div
            class="jsx-4162855406 backface"
          >
            <a
              class="jsx-4162855406 brand link"
              href="https://www.instagram.com/tudonatjela/"
              rel="noreferrer"
              target="_blank"
            >
              @tudonatjela
            </a>
            <p
              class="jsx-4162855406 description"
            >
              Social Media Management and Content Creation
            </p>
            <p
              class="jsx-4162855406 date"
            >
              2020
               - Present
            </p>
            <small
              class="jsx-4162855406"
            >
              * 
              in partnership with Sofia Ferreirinho
            </small>
          </div>
        </li>
        <li
          class="jsx-4162855406"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="kaffeehaus logo"
              data-nimg="intrinsic"
              decoding="async"
              src="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75"
              srcset="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75 2x"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </span>
          <div
            class="jsx-4162855406 backface"
          >
            <a
              class="jsx-4162855406 brand link"
              href="https://www.instagram.com/kaffeehaus_lisboa/"
              rel="noreferrer"
              target="_blank"
            >
              @kaffeehaus_lisboa
            </a>
            <p
              class="jsx-4162855406 description"
            >
              Social Media Management and Content Creation
            </p>
            <p
              class="jsx-4162855406 date"
            >
              2018
               - Present
            </p>
          </div>
        </li>
        <li
          class="jsx-4162855406"
        >
          <span
            style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
          >
            <span
              style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
            >
              <img
                alt=""
                aria-hidden="true"
                src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
              />
            </span>
            <img
              alt="guacamole logo"
              data-nimg="intrinsic"
              decoding="async"
              src="/_next/image?url=%2Fimages%2Fguacamole.jpg&w=828&q=75"
              srcset="/_next/image?url=%2Fimages%2Fguacamole.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Fguacamole.jpg&w=828&q=75 2x"
              style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
            />
          </span>
          <div
            class="jsx-4162855406 backface"
          >
            <a
              class="jsx-4162855406 brand link"
              href="https://www.instagram.com/guacamolegmg/"
              rel="noreferrer"
              target="_blank"
            >
              @guacamolegmg
            </a>
            <p
              class="jsx-4162855406 description"
            >
              Social Media Management and Content Creation
            </p>
            <p
              class="jsx-4162855406 date"
            >
              2019
               - Present
            </p>
            <small
              class="jsx-4162855406"
            >
              * 
              in partnership with Sofia Ferreirinho
            </small>
          </div>
        </li>
      </ul>
      <div
        class="jsx-2566809609 buttonWrapper"
      >
        <div
          class="jsx-2566809609 buttonBackground alignCenter"
        >
          <a
            class="jsx-2566809609 button"
            href="/pt/projects"
          >
            See more
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`<ProjectsList /> renders properly on mobile 1`] = `
<div>
  <section
    class="jsx-2990028810 container"
    data-testid="projectsList_section"
  >
    <div
      class="jsx-2990028810 wrapper genericMargins"
    >
      <h1
        class="jsx-3953086084 colored"
      >
        Projetos
      </h1>
      <div
        class="jsx-3113037301 nukaCarouselContainer"
      >
        <div
          class="slider-container"
          style="position: relative;"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            style="position: absolute; width: 1px; height: 1px; overflow: hidden; padding: 0px; margin: -1px; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border: 0px;"
            tabindex="-1"
          >
            Slide 1 of 3
          </div>
          <div
            style="align-items: center; justify-content: flex-start; position: absolute; display: flex; z-index: 1; top: 0px; left: 0px; bottom: 0px; right: 0px; pointer-events: none;"
          >
            <div
              class="slider-control-centerleft"
              style="pointer-events: auto;"
            >
              <button
                aria-label="previous slide"
                class="jsx-3113037301 previousButton"
                data-testid="nukaCarousel_previousSlideButton"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 320 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            style="align-items: center; justify-content: flex-end; position: absolute; display: flex; z-index: 1; top: 0px; left: 0px; bottom: 0px; right: 0px; pointer-events: none;"
          >
            <div
              class="slider-control-centerright"
              style="pointer-events: auto;"
            >
              <button
                aria-label="next slide"
                class="jsx-3113037301 nextButton"
                data-testid="nukaCarousel_nextSlideButton"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 320 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            aria-label="carousel-slider"
            class="slider-frame"
            role="region"
            style="overflow: hidden; width: 100%; position: relative; outline: none; height: auto; transition: height 300ms ease-in-out; will-change: height; user-select: none;"
            tabindex="0"
          >
            <div
              class="slider-list"
              style="width: 900%; text-align: left; user-select: auto; transform: translateX(calc(-33.333333333333336% - 0px)); display: flex;"
            >
              <div
                class="slide slide-current prev-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-4162855406 carouselItem"
                  data-testid="projectItem_touch_div_tjela logo"
                  data-times-touched="0"
                >
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        draggable="false"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="tjela logo"
                      data-nimg="intrinsic"
                      decoding="async"
                      draggable="false"
                      src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75"
                      srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 2x"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    />
                  </span>
                  <div
                    class="jsx-4162855406 backface"
                  >
                    <a
                      class="jsx-4162855406 brand link"
                      href="https://www.instagram.com/tudonatjela/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @tudonatjela
                    </a>
                    <p
                      class="jsx-4162855406 description"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-4162855406 date"
                    >
                      2020
                       - Presente
                    </p>
                    <small
                      class="jsx-4162855406"
                    >
                      * 
                      em dupla com Sofia Ferreirinho
                    </small>
                  </div>
                </div>
              </div>
              <div
                class="slide prev-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-4162855406 carouselItem"
                  data-testid="projectItem_touch_div_kaffeehaus logo"
                  data-times-touched="0"
                >
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        draggable="false"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="kaffeehaus logo"
                      data-nimg="intrinsic"
                      decoding="async"
                      draggable="false"
                      src="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75"
                      srcset="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75 2x"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    />
                  </span>
                  <div
                    class="jsx-4162855406 backface"
                  >
                    <a
                      class="jsx-4162855406 brand link"
                      href="https://www.instagram.com/kaffeehaus_lisboa/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @kaffeehaus_lisboa
                    </a>
                    <p
                      class="jsx-4162855406 description"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-4162855406 date"
                    >
                      2018
                       - Presente
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide prev-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-4162855406 carouselItem"
                  data-testid="projectItem_touch_div_guacamole logo"
                  data-times-touched="0"
                >
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        draggable="false"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="guacamole logo"
                      data-nimg="intrinsic"
                      decoding="async"
                      draggable="false"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    />
                    <noscript />
                  </span>
                  <div
                    class="jsx-4162855406 backface"
                  >
                    <a
                      class="jsx-4162855406 brand link"
                      href="https://www.instagram.com/guacamolegmg/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @guacamolegmg
                    </a>
                    <p
                      class="jsx-4162855406 description"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-4162855406 date"
                    >
                      2019
                       - Presente
                    </p>
                    <small
                      class="jsx-4162855406"
                    >
                      * 
                      em dupla com Sofia Ferreirinho
                    </small>
                  </div>
                </div>
              </div>
              <div
                class="slide slide-current slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-4162855406 carouselItem"
                  data-testid="projectItem_touch_div_tjela logo"
                  data-times-touched="0"
                >
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        draggable="false"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="tjela logo"
                      data-nimg="intrinsic"
                      decoding="async"
                      draggable="false"
                      src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75"
                      srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 2x"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    />
                  </span>
                  <div
                    class="jsx-4162855406 backface"
                  >
                    <a
                      class="jsx-4162855406 brand link"
                      href="https://www.instagram.com/tudonatjela/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @tudonatjela
                    </a>
                    <p
                      class="jsx-4162855406 description"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-4162855406 date"
                    >
                      2020
                       - Presente
                    </p>
                    <small
                      class="jsx-4162855406"
                    >
                      * 
                      em dupla com Sofia Ferreirinho
                    </small>
                  </div>
                </div>
              </div>
              <div
                class="slide slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-4162855406 carouselItem"
                  data-testid="projectItem_touch_div_kaffeehaus logo"
                  data-times-touched="0"
                >
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        draggable="false"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="kaffeehaus logo"
                      data-nimg="intrinsic"
                      decoding="async"
                      draggable="false"
                      src="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75"
                      srcset="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75 2x"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    />
                  </span>
                  <div
                    class="jsx-4162855406 backface"
                  >
                    <a
                      class="jsx-4162855406 brand link"
                      href="https://www.instagram.com/kaffeehaus_lisboa/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @kaffeehaus_lisboa
                    </a>
                    <p
                      class="jsx-4162855406 description"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-4162855406 date"
                    >
                      2018
                       - Presente
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-4162855406 carouselItem"
                  data-testid="projectItem_touch_div_guacamole logo"
                  data-times-touched="0"
                >
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        draggable="false"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="guacamole logo"
                      data-nimg="intrinsic"
                      decoding="async"
                      draggable="false"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    />
                    <noscript />
                  </span>
                  <div
                    class="jsx-4162855406 backface"
                  >
                    <a
                      class="jsx-4162855406 brand link"
                      href="https://www.instagram.com/guacamolegmg/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @guacamolegmg
                    </a>
                    <p
                      class="jsx-4162855406 description"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-4162855406 date"
                    >
                      2019
                       - Presente
                    </p>
                    <small
                      class="jsx-4162855406"
                    >
                      * 
                      em dupla com Sofia Ferreirinho
                    </small>
                  </div>
                </div>
              </div>
              <div
                class="slide slide-current next-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-4162855406 carouselItem"
                  data-testid="projectItem_touch_div_tjela logo"
                  data-times-touched="0"
                >
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        draggable="false"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="tjela logo"
                      data-nimg="intrinsic"
                      decoding="async"
                      draggable="false"
                      src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75"
                      srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 2x"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    />
                  </span>
                  <div
                    class="jsx-4162855406 backface"
                  >
                    <a
                      class="jsx-4162855406 brand link"
                      href="https://www.instagram.com/tudonatjela/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @tudonatjela
                    </a>
                    <p
                      class="jsx-4162855406 description"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-4162855406 date"
                    >
                      2020
                       - Presente
                    </p>
                    <small
                      class="jsx-4162855406"
                    >
                      * 
                      em dupla com Sofia Ferreirinho
                    </small>
                  </div>
                </div>
              </div>
              <div
                class="slide next-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-4162855406 carouselItem"
                  data-testid="projectItem_touch_div_kaffeehaus logo"
                  data-times-touched="0"
                >
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        draggable="false"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="kaffeehaus logo"
                      data-nimg="intrinsic"
                      decoding="async"
                      draggable="false"
                      src="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75"
                      srcset="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75 2x"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    />
                  </span>
                  <div
                    class="jsx-4162855406 backface"
                  >
                    <a
                      class="jsx-4162855406 brand link"
                      href="https://www.instagram.com/kaffeehaus_lisboa/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @kaffeehaus_lisboa
                    </a>
                    <p
                      class="jsx-4162855406 description"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-4162855406 date"
                    >
                      2018
                       - Presente
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide next-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-4162855406 carouselItem"
                  data-testid="projectItem_touch_div_guacamole logo"
                  data-times-touched="0"
                >
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        draggable="false"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="guacamole logo"
                      data-nimg="intrinsic"
                      decoding="async"
                      draggable="false"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    />
                    <noscript />
                  </span>
                  <div
                    class="jsx-4162855406 backface"
                  >
                    <a
                      class="jsx-4162855406 brand link"
                      href="https://www.instagram.com/guacamolegmg/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @guacamolegmg
                    </a>
                    <p
                      class="jsx-4162855406 description"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-4162855406 date"
                    >
                      2019
                       - Presente
                    </p>
                    <small
                      class="jsx-4162855406"
                    >
                      * 
                      em dupla com Sofia Ferreirinho
                    </small>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="jsx-2566809609 buttonWrapper"
      >
        <div
          class="jsx-2566809609 buttonBackground alignCenter"
        >
          <a
            class="jsx-2566809609 button"
            href="/pt/projects"
          >
            Ver mais
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;

exports[`<ProjectsList /> renders properly on tablet 1`] = `
<div>
  <section
    class="jsx-2990028810 container"
    data-testid="projectsList_section"
  >
    <div
      class="jsx-2990028810 wrapper genericMargins"
    >
      <h1
        class="jsx-3953086084 colored"
      >
        Projetos
      </h1>
      <div
        class="jsx-2993345325 nukaCarouselContainer"
      >
        <div
          class="slider-container"
          style="position: relative;"
        >
          <div
            aria-atomic="true"
            aria-live="polite"
            style="position: absolute; width: 1px; height: 1px; overflow: hidden; padding: 0px; margin: -1px; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; border: 0px;"
            tabindex="-1"
          >
            Slide 1 of 3
          </div>
          <div
            style="align-items: center; justify-content: flex-start; position: absolute; display: flex; z-index: 1; top: 0px; left: 0px; bottom: 0px; right: 0px; pointer-events: none;"
          >
            <div
              class="slider-control-centerleft"
              style="pointer-events: auto;"
            >
              <button
                aria-label="previous slide"
                class="jsx-2993345325 previousButton"
                data-testid="nukaCarousel_previousSlideButton"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 320 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M34.52 239.03L228.87 44.69c9.37-9.37 24.57-9.37 33.94 0l22.67 22.67c9.36 9.36 9.37 24.52.04 33.9L131.49 256l154.02 154.75c9.34 9.38 9.32 24.54-.04 33.9l-22.67 22.67c-9.37 9.37-24.57 9.37-33.94 0L34.52 272.97c-9.37-9.37-9.37-24.57 0-33.94z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            style="align-items: center; justify-content: flex-end; position: absolute; display: flex; z-index: 1; top: 0px; left: 0px; bottom: 0px; right: 0px; pointer-events: none;"
          >
            <div
              class="slider-control-centerright"
              style="pointer-events: auto;"
            >
              <button
                aria-label="next slide"
                class="jsx-2993345325 nextButton"
                data-testid="nukaCarousel_nextSlideButton"
                type="button"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 320 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M285.476 272.971L91.132 467.314c-9.373 9.373-24.569 9.373-33.941 0l-22.667-22.667c-9.357-9.357-9.375-24.522-.04-33.901L188.505 256 34.484 101.255c-9.335-9.379-9.317-24.544.04-33.901l22.667-22.667c9.373-9.373 24.569-9.373 33.941 0L285.475 239.03c9.373 9.372 9.373 24.568.001 33.941z"
                  />
                </svg>
              </button>
            </div>
          </div>
          <div
            aria-label="carousel-slider"
            class="slider-frame"
            role="region"
            style="overflow: hidden; width: 100%; position: relative; outline: none; height: auto; transition: height 300ms ease-in-out; will-change: height; user-select: none;"
            tabindex="0"
          >
            <div
              class="slider-list"
              style="width: 900%; text-align: left; user-select: auto; transform: translateX(calc(-33.333333333333336% - 0px)); display: flex;"
            >
              <div
                class="slide slide-current prev-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-4162855406 carouselItem"
                  data-testid="projectItem_touch_div_tjela logo"
                  data-times-touched="0"
                >
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        draggable="false"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="tjela logo"
                      data-nimg="intrinsic"
                      decoding="async"
                      draggable="false"
                      src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75"
                      srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 2x"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    />
                  </span>
                  <div
                    class="jsx-4162855406 backface"
                  >
                    <a
                      class="jsx-4162855406 brand link"
                      href="https://www.instagram.com/tudonatjela/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @tudonatjela
                    </a>
                    <p
                      class="jsx-4162855406 description"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-4162855406 date"
                    >
                      2020
                       - Presente
                    </p>
                    <small
                      class="jsx-4162855406"
                    >
                      * 
                      em dupla com Sofia Ferreirinho
                    </small>
                  </div>
                </div>
              </div>
              <div
                class="slide prev-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-4162855406 carouselItem"
                  data-testid="projectItem_touch_div_kaffeehaus logo"
                  data-times-touched="0"
                >
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        draggable="false"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="kaffeehaus logo"
                      data-nimg="intrinsic"
                      decoding="async"
                      draggable="false"
                      src="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75"
                      srcset="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75 2x"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    />
                  </span>
                  <div
                    class="jsx-4162855406 backface"
                  >
                    <a
                      class="jsx-4162855406 brand link"
                      href="https://www.instagram.com/kaffeehaus_lisboa/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @kaffeehaus_lisboa
                    </a>
                    <p
                      class="jsx-4162855406 description"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-4162855406 date"
                    >
                      2018
                       - Presente
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide prev-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-4162855406 carouselItem"
                  data-testid="projectItem_touch_div_guacamole logo"
                  data-times-touched="0"
                >
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        draggable="false"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="guacamole logo"
                      data-nimg="intrinsic"
                      decoding="async"
                      draggable="false"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    />
                    <noscript />
                  </span>
                  <div
                    class="jsx-4162855406 backface"
                  >
                    <a
                      class="jsx-4162855406 brand link"
                      href="https://www.instagram.com/guacamolegmg/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @guacamolegmg
                    </a>
                    <p
                      class="jsx-4162855406 description"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-4162855406 date"
                    >
                      2019
                       - Presente
                    </p>
                    <small
                      class="jsx-4162855406"
                    >
                      * 
                      em dupla com Sofia Ferreirinho
                    </small>
                  </div>
                </div>
              </div>
              <div
                class="slide slide-current slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-4162855406 carouselItem"
                  data-testid="projectItem_touch_div_tjela logo"
                  data-times-touched="0"
                >
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        draggable="false"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="tjela logo"
                      data-nimg="intrinsic"
                      decoding="async"
                      draggable="false"
                      src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75"
                      srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 2x"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    />
                  </span>
                  <div
                    class="jsx-4162855406 backface"
                  >
                    <a
                      class="jsx-4162855406 brand link"
                      href="https://www.instagram.com/tudonatjela/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @tudonatjela
                    </a>
                    <p
                      class="jsx-4162855406 description"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-4162855406 date"
                    >
                      2020
                       - Presente
                    </p>
                    <small
                      class="jsx-4162855406"
                    >
                      * 
                      em dupla com Sofia Ferreirinho
                    </small>
                  </div>
                </div>
              </div>
              <div
                class="slide slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-4162855406 carouselItem"
                  data-testid="projectItem_touch_div_kaffeehaus logo"
                  data-times-touched="0"
                >
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        draggable="false"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="kaffeehaus logo"
                      data-nimg="intrinsic"
                      decoding="async"
                      draggable="false"
                      src="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75"
                      srcset="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75 2x"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    />
                  </span>
                  <div
                    class="jsx-4162855406 backface"
                  >
                    <a
                      class="jsx-4162855406 brand link"
                      href="https://www.instagram.com/kaffeehaus_lisboa/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @kaffeehaus_lisboa
                    </a>
                    <p
                      class="jsx-4162855406 description"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-4162855406 date"
                    >
                      2018
                       - Presente
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-4162855406 carouselItem"
                  data-testid="projectItem_touch_div_guacamole logo"
                  data-times-touched="0"
                >
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        draggable="false"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="guacamole logo"
                      data-nimg="intrinsic"
                      decoding="async"
                      draggable="false"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    />
                    <noscript />
                  </span>
                  <div
                    class="jsx-4162855406 backface"
                  >
                    <a
                      class="jsx-4162855406 brand link"
                      href="https://www.instagram.com/guacamolegmg/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @guacamolegmg
                    </a>
                    <p
                      class="jsx-4162855406 description"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-4162855406 date"
                    >
                      2019
                       - Presente
                    </p>
                    <small
                      class="jsx-4162855406"
                    >
                      * 
                      em dupla com Sofia Ferreirinho
                    </small>
                  </div>
                </div>
              </div>
              <div
                class="slide slide-current next-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-4162855406 carouselItem"
                  data-testid="projectItem_touch_div_tjela logo"
                  data-times-touched="0"
                >
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        draggable="false"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="tjela logo"
                      data-nimg="intrinsic"
                      decoding="async"
                      draggable="false"
                      src="/_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75"
                      srcset="/_next/image?url=%2Fimages%2Ftjela.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Ftjela.jpg&w=828&q=75 2x"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    />
                  </span>
                  <div
                    class="jsx-4162855406 backface"
                  >
                    <a
                      class="jsx-4162855406 brand link"
                      href="https://www.instagram.com/tudonatjela/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @tudonatjela
                    </a>
                    <p
                      class="jsx-4162855406 description"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-4162855406 date"
                    >
                      2020
                       - Presente
                    </p>
                    <small
                      class="jsx-4162855406"
                    >
                      * 
                      em dupla com Sofia Ferreirinho
                    </small>
                  </div>
                </div>
              </div>
              <div
                class="slide next-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-4162855406 carouselItem"
                  data-testid="projectItem_touch_div_kaffeehaus logo"
                  data-times-touched="0"
                >
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        draggable="false"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="kaffeehaus logo"
                      data-nimg="intrinsic"
                      decoding="async"
                      draggable="false"
                      src="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75"
                      srcset="/_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=640&q=75 1x, /_next/image?url=%2Fimages%2Fkaffeehaus.jpg&w=828&q=75 2x"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    />
                  </span>
                  <div
                    class="jsx-4162855406 backface"
                  >
                    <a
                      class="jsx-4162855406 brand link"
                      href="https://www.instagram.com/kaffeehaus_lisboa/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @kaffeehaus_lisboa
                    </a>
                    <p
                      class="jsx-4162855406 description"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-4162855406 date"
                    >
                      2018
                       - Presente
                    </p>
                  </div>
                </div>
              </div>
              <div
                class="slide next-cloned slide-visible"
                style="width: 11.11111111111111%; height: auto; padding: 0px 0px; opacity: 1;"
              >
                <div
                  class="jsx-4162855406 carouselItem"
                  data-testid="projectItem_touch_div_guacamole logo"
                  data-times-touched="0"
                >
                  <span
                    style="box-sizing: border-box; display: inline-block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: relative; max-width: 100%;"
                  >
                    <span
                      style="box-sizing: border-box; display: block; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; max-width: 100%;"
                    >
                      <img
                        alt=""
                        aria-hidden="true"
                        draggable="false"
                        src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%27400%27%20height=%27400%27/%3e"
                        style="display: block; max-width: 100%; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px;"
                      />
                    </span>
                    <img
                      alt="guacamole logo"
                      data-nimg="intrinsic"
                      decoding="async"
                      draggable="false"
                      src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
                      style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
                    />
                    <noscript />
                  </span>
                  <div
                    class="jsx-4162855406 backface"
                  >
                    <a
                      class="jsx-4162855406 brand link"
                      href="https://www.instagram.com/guacamolegmg/"
                      rel="noreferrer"
                      target="_blank"
                    >
                      @guacamolegmg
                    </a>
                    <p
                      class="jsx-4162855406 description"
                    >
                      Gestão de Redes Sociais e Criação de Conteúdo
                    </p>
                    <p
                      class="jsx-4162855406 date"
                    >
                      2019
                       - Presente
                    </p>
                    <small
                      class="jsx-4162855406"
                    >
                      * 
                      em dupla com Sofia Ferreirinho
                    </small>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="jsx-2566809609 buttonWrapper"
      >
        <div
          class="jsx-2566809609 buttonBackground alignCenter"
        >
          <a
            class="jsx-2566809609 button"
            href="/pt/projects"
          >
            Ver mais
          </a>
        </div>
      </div>
    </div>
  </section>
</div>
`;
